--- a/lia2Proj/Finished.html
+++ b/lia2Proj/Finished.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Malfunctions.html">Telges driftstatussida</a>
+      <a class="navbar-brand" href="Malfunctions.html">Telge driftstatussida</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,7 +20,7 @@
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Link
+              Val
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Malfunctions.html">Malfunctions</a></li>
