--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -11,15 +11,12 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Malfunctions.html">Telges driftstatussida</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="Malfunctions.html">Telge driftstatussida</a>
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Link
+              Val
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Malfunctions.html">Malfunctions</a></li>
