--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ongoing</title>
+    <title>Malfunctions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
 </head>
 <body>
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="Malfunctions.html">Telge driftstatussida</a>
@@ -19,11 +18,11 @@
               Val
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Malfunctions.html">Malfunctions</a></li>
-              <li><a class="dropdown-item" href="Ongoing.html">Påbörjade</a></li>
+              <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
+              <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="Upcomings.html">Planerade underhåll</a></li>
-              <li><a class="dropdown-item" href="Finished.html">Avklarade</a></li>
+              <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
+              <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
             </ul>
           </li>
         </ul>
@@ -31,27 +30,51 @@
     </div>
 </nav>
 
-    <header>
-        <h3>Driftstörningar</h3>
-    </header>
+  <header>
+      <h3>Driftstörningar</h3>
+  </header>
 
-    <div id="driftBox" class="alert alert-info">
-        <strong>Driftstörning - [Systemnamn]</strong><br>
-        Starttid: [Datum & Tid]<br>
-        Påverkan: [Kort beskrivning av vad som inte fungerar]<br>
-        Åtgärd pågår: [Vad som görs för att lösa problemet]<br>
-        Förväntad lösningstid: [Estimerad tid för åtgärd, eller "Okänd" om ingen tid kan anges ännu]<br>
-        Nästa uppdatering: [När nästa statusuppdatering kommer]<br>
-        Kontakt: [Namn/E-post/Telefon till ansvarig]
-    </div>
+<div class="flex-container">
+  <div>
+    <div class="lamp"></div>
+    <strong>Driftstörning - DX49KN0</strong><br>
+    Starttid: 12/3/2025 - 12:00<br>
+    Problem: Användare X syns inte i systemet<br>
+    Åtgärd pågår: Inväntar sysadmin login<br>
+    Förväntad lösningstid: 1-2 veckor<br>
+    Nästa uppdatering: Om 1 vecka<br>
+    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+  </div>
+</div>
+<div class="flex-container">
+  <div>
+    <strong>Driftstörning - DX49KN0</strong><br>
+    Starttid: 12/3/2025 - 12:00<br>
+    Problem: Användare X syns inte i systemet<br>
+    Åtgärd pågår: Inväntar sysadmin login<br>
+    Förväntad lösningstid: 1-2 veckor<br>
+    Nästa uppdatering: Om 1 vecka<br>
+    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+  </div>
+  </div>
+<div class="flex-container">
+<div>
+  <strong>Driftstörning - DX49KN0</strong><br>
+  Starttid: 12/3/2025 - 12:00<br>
+  Problem: Användare X syns inte i systemet<br>
+  Åtgärd pågår: Inväntar sysadmin login<br>
+  Förväntad lösningstid: 1-2 veckor<br>
+  Nästa uppdatering: Om 1 vecka<br>
+  Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+</div>
+</div>  
 
-    <!-- Footer -->
 <footer>
     <p class="footer-text">Telge</p>
 </footer>
 
-    <script src="script/ServiceStatus.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+<script src="script/Malfunctions.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
