--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ongoing</title>
+    <title>Upcoming</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
-    <link rel="stylesheet" href="./css/Ongoing.css"/>
+    <link rel="stylesheet" href="./css/Upcoming.css"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -32,8 +32,11 @@
 </nav>
 
   <header>
-      <h3>Pågående underhåll</h3>
+      <h3>Planerade underhåll</h3>
   </header>
+
+<button id="createUpcomingBtn">Skapa ny driftstörning</button>
+<div id="upcoming-container"></div>
 
 <div class="flex-container">
   <div>
@@ -73,7 +76,7 @@
     <p class="footer-text">Telge</p>
 </footer>
 
-<script src="script/Ongoing.js"></script>
+<script src="script/Upcoming.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
