--- a/lia2Proj/Ongoing.html
+++ b/lia2Proj/Ongoing.html
@@ -37,7 +37,10 @@
 
 <div class="flex-container">
   <div>
-    <strong>Driftstörning - DX49KN0</strong><br>
+    <span class="lamp-container">
+      <div class="lamp"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>
     Starttid: 12/3/2025 - 12:00<br>
     Problem: Användare X syns inte i systemet<br>
     Åtgärd pågår: Inväntar sysadmin login<br>
@@ -48,7 +51,10 @@
 </div>
 <div class="flex-container">
   <div>
-    <strong>Driftstörning - DX49KN0</strong><br>
+    <span class="lamp-container">
+      <div class="lamp"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>    
     Starttid: 12/3/2025 - 12:00<br>
     Problem: Användare X syns inte i systemet<br>
     Åtgärd pågår: Inväntar sysadmin login<br>
@@ -59,7 +65,10 @@
   </div>
 <div class="flex-container">
 <div>
-  <strong>Driftstörning - DX49KN0</strong><br>
+  <span class="lamp-container">
+    <div class="lamp"></div>
+    <strong>Driftstörning - DX49KN0</strong>
+  </span><br>
   Starttid: 12/3/2025 - 12:00<br>
   Problem: Användare X syns inte i systemet<br>
   Åtgärd pågår: Inväntar sysadmin login<br>
