--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upcoming</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.15/index.global.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
     <link rel="stylesheet" href="./css/Upcoming.css"/>
@@ -28,6 +29,7 @@
           </li>
         </ul>
       </div>
+      <div id="calendar"></div>
     </div>
 </nav>
 
@@ -40,7 +42,10 @@
 
 <div class="flex-container">
   <div>
-    <strong>Driftstörning - DX49KN0</strong><br>
+    <span class="lamp-container">
+      <div class="lamp"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>
     Starttid: 12/3/2025 - 12:00<br>
     Problem: Användare X syns inte i systemet<br>
     Åtgärd pågår: Inväntar sysadmin login<br>
@@ -51,7 +56,10 @@
 </div>
 <div class="flex-container">
   <div>
-    <strong>Driftstörning - DX49KN0</strong><br>
+    <span class="lamp-container">
+      <div class="lamp"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>
     Starttid: 12/3/2025 - 12:00<br>
     Problem: Användare X syns inte i systemet<br>
     Åtgärd pågår: Inväntar sysadmin login<br>
@@ -62,7 +70,10 @@
   </div>
 <div class="flex-container">
 <div>
-  <strong>Driftstörning - DX49KN0</strong><br>
+  <span class="lamp-container">
+    <div class="lamp"></div>
+    <strong>Driftstörning - DX49KN0</strong>
+  </span><br>
   Starttid: 12/3/2025 - 12:00<br>
   Problem: Användare X syns inte i systemet<br>
   Åtgärd pågår: Inväntar sysadmin login<br>
@@ -79,5 +90,7 @@
 <script src="script/Upcoming.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.15/index.global.min.js"></script>
+
 </body>
 </html>
