--- a/lia2Proj/Finished.html
+++ b/lia2Proj/Finished.html
@@ -20,7 +20,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
-              <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li>
+              <!-- <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li> -->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
               <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
@@ -35,48 +35,38 @@
       <h3>Avklarade störningar</h3>
   </header>
 
-<div class="flex-container">
-  <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-    </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
-  </div>
-</div>
-<div class="flex-container">
-  <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-    </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
-  </div>
-  </div>
-<div class="flex-container">
-<div>
-  <span class="lamp-container">
-    <div class="lamp"></div>
-    <strong>Driftstörning - DX49KN0</strong>
-  </span><br>
-  Starttid: 12/3/2025 - 12:00<br>
-  Problem: Användare X syns inte i systemet<br>
-  Åtgärd pågår: Inväntar sysadmin login<br>
-  Förväntad lösningstid: 1-2 veckor<br>
-  Nästa uppdatering: Om 1 vecka<br>
-  Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
-</div>
-</div>  
+<!-- Table for finished malfunctions -->
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Starttid</th>
+      <th scope="col">Åtgärdat</th>
+      <th scope="col">Problem</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="table-id-column"><span class="lamp4"></span><a href="details/DX49KN0.html">DX49KN0</a></td>
+      <td>12/3/2025 - 12:00</td>
+      <td>12/3/2025 - 18:00</td>
+      <td>Användare X syntes inte i systemet</td>
+    </tr>
+    <tr>
+      <td class="table-id-column"><span class="lamp4"></span><a href="details/DX49KN0.html">DX49KN0</a></td>
+      <td>12/3/2025 - 12:00</td>
+      <td>12/3/2025 - 18:00</td>
+      <td>Användare X syntes inte i systemet</td>
+    </tr>
+    <tr>
+      <td class="table-id-column"><span class="lamp4"></span><a href="details/DX49KN0.html">DX49KN0</a></td>
+      <td>12/3/2025 - 12:00</td>
+      <td>12/3/2025 - 18:00</td>
+      <td>Användare X syntes inte i systemet</td>
+    </tr>
+    <!-- Lägg till fler rader här för andra störningar -->
+  </tbody>
+</table>
 
 <footer>
     <p class="footer-text">Telge</p>
