--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
-              <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li>
+              <!-- <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li> -->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
               <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
@@ -40,10 +40,10 @@
 <button id="createUpcomingBtn">Skapa ny driftstörning</button>
 <div id="upcoming-container"></div>
 
-<div class="flex-container">
+<div class="flex-container3">
   <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
+    <span class="lamp-container3">
+      <div class="lamp3"></div>
       <strong>Driftstörning - DX49KN0</strong>
     </span><br>
     Starttid: 12/3/2025 - 12:00<br>
@@ -54,10 +54,10 @@
     Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
   </div>
 </div>
-<div class="flex-container">
+<div class="flex-container3">
   <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
+    <span class="lamp-container3">
+      <div class="lamp3"></div>
       <strong>Driftstörning - DX49KN0</strong>
     </span><br>
     Starttid: 12/3/2025 - 12:00<br>
@@ -68,10 +68,10 @@
     Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
   </div>
   </div>
-<div class="flex-container">
+<div class="flex-container3">
 <div>
-  <span class="lamp-container">
-    <div class="lamp"></div>
+  <span class="lamp-container3">
+    <div class="lamp3"></div>
     <strong>Driftstörning - DX49KN0</strong>
   </span><br>
   Starttid: 12/3/2025 - 12:00<br>
