--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malfunctions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./css/Ongoing.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
 </head>
 <body>
@@ -19,7 +20,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
-              <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li>
+              <!-- <li><a class="dropdown-item" href="Ongoing.html">Pågående underhåll</a></li> -->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
               <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
@@ -30,14 +31,27 @@
     </div>
 </nav>
 
-  <header>
-      <h3>Driftstörningar</h3>
-  </header>
+<header>
+    <h3>Driftstörningar</h3>
+</header>
 
-<div class="flex-container">
+<!-- Status indicator section -->
+<div class="status-indicator">
+  <div class="status-item">
+    <div class="lamp red-lamp"></div>
+    <span>Ej påbörjad</span>
+  </div>
+  <div class="status-item">
+    <div class="lamp orange-lamp"></div>
+    <span>Pågående underhåll</span>
+  </div>
+</div>
+
+<!-- Malfunctions section -->
+<div class="flex-container1">
   <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
       <strong>Driftstörning - DX49KN0</strong>
     </span><br>
     Starttid: 12/3/2025 - 12:00<br>
@@ -48,10 +62,11 @@
     Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
   </div>
 </div>
-<div class="flex-container">
+
+<div class="flex-container1">
   <div>
-    <span class="lamp-container">
-      <div class="lamp"></div>
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
       <strong>Driftstörning - DX49KN0</strong>
     </span><br>
     Starttid: 12/3/2025 - 12:00<br>
@@ -61,21 +76,39 @@
     Nästa uppdatering: Om 1 vecka<br>
     Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
   </div>
-  </div>
-<div class="flex-container">
-<div>
-  <span class="lamp-container">
-    <div class="lamp"></div>
-    <strong>Driftstörning - DX49KN0</strong>
-  </span><br>
-  Starttid: 12/3/2025 - 12:00<br>
-  Problem: Användare X syns inte i systemet<br>
-  Åtgärd pågår: Inväntar sysadmin login<br>
-  Förväntad lösningstid: 1-2 veckor<br>
-  Nästa uppdatering: Om 1 vecka<br>
-  Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
 </div>
-</div>  
+
+<!-- Ongoing maintenance section -->
+
+<div class="flex-container2">
+  <div>
+    <span class="lamp-container2">
+      <div class="lamp2"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>
+    Starttid: 12/3/2025 - 12:00<br>
+    Problem: Användare X syns inte i systemet<br>
+    Åtgärd pågår: Inväntar sysadmin login<br>
+    Förväntad lösningstid: 1-2 veckor<br>
+    Nästa uppdatering: Om 1 vecka<br>
+    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+  </div>
+</div>
+
+<div class="flex-container2">
+  <div>
+    <span class="lamp-container2">
+      <div class="lamp2"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+    </span><br>
+    Starttid: 12/3/2025 - 12:00<br>
+    Problem: Användare X syns inte i systemet<br>
+    Åtgärd pågår: Inväntar sysadmin login<br>
+    Förväntad lösningstid: 1-2 veckor<br>
+    Nästa uppdatering: Om 1 vecka<br>
+    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+  </div>
+</div>
 
 <footer>
     <p class="footer-text">Telge</p>
