btn update and more

--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -53,6 +53,7 @@
     <span class="lamp-container1">
       <div class="lamp1"></div>
       <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
     </span><br>
     Starttid: 12/3/2025 - 12:00<br>
     Problem: Användare X syns inte i systemet<br>
