--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -29,16 +29,17 @@
           </li>
         </ul>
       </div>
-      <div id="calendar"></div>
     </div>
-</nav>
-
+  </nav>
+  
   <header>
-      <h3>Planerade underhåll</h3>
+    <h3>Planerade underhåll</h3>
+    <div id="calendar"></div>
   </header>
-
-<button id="createUpcomingBtn">Skapa ny driftstörning</button>
-<div id="upcoming-container"></div>
+  
+  <div class="upcoming-container"> 
+    <button id="createUpcomingBtn">Skapa ny driftstörning</button>
+  </div>
 
 <div class="flex-container3">
   <div>
