--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -54,12 +54,12 @@
       <strong>Driftstörning - DX49KN0</strong>
       <button class="editBtn">Redigera</button>
     </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
   </div>
 </div>
 
@@ -68,30 +68,31 @@
     <span class="lamp-container1">
       <div class="lamp1"></div>
       <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
     </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
   </div>
 </div>
 
 <!-- Ongoing maintenance section -->
-
 <div class="flex-container2">
   <div>
     <span class="lamp-container2">
       <div class="lamp2"></div>
       <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
     </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
   </div>
 </div>
 
@@ -100,13 +101,14 @@
     <span class="lamp-container2">
       <div class="lamp2"></div>
       <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
     </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
   </div>
 </div>
 
@@ -115,6 +117,7 @@
 </footer>
 
 <script src="script/Malfunctions.js"></script>
+<script src="script/Ongoing.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
