--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -34,6 +34,17 @@
     <h3>Driftstörningar</h3>
 </header>
 
+<!-- Sidepanel section -->
+<div id="mySidebar" class="sidebar">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+  <a href="#">Mail</a>
+  <a href="#">Teams</a>
+</div>
+
+<div id="main">
+  <button class="openbtn" onclick="openNav()">☰ Skicka via...</button>  
+</div>
+
 <!-- Status indicator section -->
 <div class="status-indicator">
   <div class="status-item">
