--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -7,32 +7,36 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Ongoing.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
+    <link rel="stylesheet" href="./css/telgeFont.css"/>
+    
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="Malfunctions.html">Telge driftstatussida</a>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Val
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
-              <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+      <h3>Telge Driftstatus</h3>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="Malfunctions.html">Driftstörningar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Upcoming.html">Planerade underhåll</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Finished.html">Avklarade störningar</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 
-<header>
+<!-- <header>
     <h3>Driftstörningar</h3>
-</header>
+</header> -->
 
 <!-- Sidepanel section -->
 <div id="mySidebar" class="sidebar">
@@ -40,61 +44,139 @@
   <a href="#">Mail</a>
   <a href="#">Teams</a>
 </div>
-
 <div id="main">
   <button class="openbtn" onclick="openNav()">☰ Skicka via...</button>  
 </div>
 
 <!-- Status indicator section -->
-<div class="status-indicator">
-  <div class="status-item">
-    <div class="lamp red-lamp"></div>
-    <span>Ej påbörjad</span>
+<div class="status-item2">
+  <div id="orangecollapsebar" class="orangecollapsebar">
+    <button id="orangetoggleCollapse">☰</button>
   </div>
-  <div class="status-item">
-    <div class="lamp orange-lamp"></div>
-    <span>Pågående underhåll</span>
-  </div>
+  <div class="lamp orange-lamp"></div>
+  <span>Pågående underhåll</span>
+</div>
 </div>
 
-<!-- Malfunctions section -->
-<div class="flex-container1">
-  <div>
-    <span class="lamp-container1">
-      <div class="lamp1"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-      <button class="editBtn">Redigera</button>
-    </span><br>
-    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
-    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
-    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
-    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
-    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
-  </div>
-</div>
-
-<div class="flex-container1">
-  <div>
-    <span class="lamp-container1">
-      <div class="lamp1"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-      <button class="editBtn">Redigera</button>
-    </span><br>
-    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
-    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
-    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
-    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
-    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
-  </div>
-</div>
-
+<div id="main-content" class="main-content">
 <!-- Ongoing maintenance section -->
-<div class="flex-container2">
-  <div>
+<div class="flex-wrapper2">
+  <div class="flex-item2">
     <span class="lamp-container2">
       <div class="lamp2"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+
+  <div class="flex-item2">
+    <span class="lamp-container2">
+      <div class="lamp2"></div>
+      <strong>Driftstörning - DX49KN1</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 13/3/2025 - 14:00</span><br>
+    <span class="problem">Problem: Användare Y kan inte logga in</span><br>
+    <span class="atgard">Åtgärd pågår: Omstart av server</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1 dag</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 2 timmar</span><br>
+    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span>
+  </div>
+</div>
+
+<!-- Status indicator section -->
+<div class="status-indicator">
+  <div class="status-item1">
+    <div id="redcollapsebar" class="redcollapsebar">
+      <button id="redtoggleCollapse">☰</button>
+    </div>
+    <div class="lamp red-lamp"></div>
+    <span>Ej påbörjade</span>
+  </div>
+</div>
+
+<div id="main-content" class="main-content">
+<!-- Malfunction section -->
+<div class="flex-wrapper1">
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+  
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+  
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+  
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+  
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
+      <strong>Driftstörning - DX49KN0</strong>
+      <button class="editBtn">Redigera</button>
+    </span><br>
+    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+  </div>
+  
+  <div class="flex-item1">
+    <span class="lamp-container1">
+      <div class="lamp1"></div>
       <strong>Driftstörning - DX49KN0</strong>
       <button class="editBtn">Redigera</button>
     </span><br>
@@ -106,25 +188,10 @@
     <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
   </div>
 </div>
-
-<div class="flex-container2">
-  <div>
-    <span class="lamp-container2">
-      <div class="lamp2"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-      <button class="editBtn">Redigera</button>
-    </span><br>
-    <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
-    <span class="problem">Problem: Användare X syns inte i systemet</span><br>
-    <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
-    <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
-    <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
-  </div>
 </div>
 
 <footer>
-    <p class="footer-text">Telge</p>
+  <p class="footer-text">Telge</p>
 </footer>
 
 <script src="script/Malfunctions.js"></script>
