--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
     <link rel="stylesheet" href="./css/Upcoming.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -33,8 +34,9 @@
   
   <header>
     <h3>Planerade underhåll</h3>
-    <div id="calendar"></div>
   </header>
+
+  <input type="text" id="datepicker">
   
   <div class="upcoming-container"> 
     <button id="createUpcomingBtn">Skapa ny driftstörning</button>
@@ -90,7 +92,12 @@
 <script src="script/Upcoming.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.15/index.global.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var picker = new Pikaday({ field: document.getElementById('datepicker') });
+  });
+</script>
 
 </body>
 </html>
