--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -8,96 +8,93 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/Malfunctions.css"/>
     <link rel="stylesheet" href="./css/Upcoming.css"/>
+    <link rel="stylesheet" href="./css/telgeFont.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css">
 </head>
 <body>
+
+<!-- Navbar section -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="Malfunctions.html">Telge driftstatussida</a>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Val
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Malfunctions.html">Driftstörningar</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="Upcoming.html">Planerade underhåll</a></li>
-              <li><a class="dropdown-item" href="Finished.html">Avklarade störningar</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="Malfunctions.html">Telge driftstatus</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="Malfunctions.html">Driftstörningar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Upcoming.html">Planerade underhåll</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Finished.html">Avklarade störningar</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  
-  <header>
-    <h3>Planerade underhåll</h3>
-  </header>
+  </div>
+</nav>
 
-  <input type="text" id="datepicker">
+<input type="text" id="datepicker" placeholder="Välj datum">
   
-  <div class="upcoming-container"> 
-    <button id="createUpcomingBtn">Skapa ny driftstörning</button>
-  </div>
+<button id="createUpcomingBtn">Skapa ny driftstörning</button>
 
-<div class="flex-container3">
-  <div>
-    <span class="lamp-container3">
-      <div class="lamp3"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-    </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
+<div class="upcoming-container">   
+  <div class="flex-container3">
+    <div>
+      <span class="lamp-container3">
+        <div class="lamp3"></div>
+        <strong>Driftstörning - XXXXX</strong>
+        <button class="editBtn">Redigera</button>
+      </span><br>
+      <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+      <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+      <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+      <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+      <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+      <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    </div>
   </div>
+  <div class="flex-container3">
+    <div>
+      <span class="lamp-container3">
+        <div class="lamp3"></div>
+        <strong>Driftstörning - XXXXX</strong>
+        <button class="editBtn">Redigera</button>
+      </span><br>
+      <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+      <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+      <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+      <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+      <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+      <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    </div>
+  </div>
+  <div class="flex-container3">
+    <div>
+      <span class="lamp-container3">
+        <div class="lamp3"></div>
+        <strong>Driftstörning - XXXXX</strong>
+        <button class="editBtn">Redigera</button>
+      </span><br>
+      <span class="starttid">Starttid: 12/3/2025 - 12:00</span><br>
+      <span class="problem">Problem: Användare X syns inte i systemet</span><br>
+      <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
+      <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
+      <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
+      <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    </div>
+  </div>  
 </div>
-<div class="flex-container3">
-  <div>
-    <span class="lamp-container3">
-      <div class="lamp3"></div>
-      <strong>Driftstörning - DX49KN0</strong>
-    </span><br>
-    Starttid: 12/3/2025 - 12:00<br>
-    Problem: Användare X syns inte i systemet<br>
-    Åtgärd pågår: Inväntar sysadmin login<br>
-    Förväntad lösningstid: 1-2 veckor<br>
-    Nästa uppdatering: Om 1 vecka<br>
-    Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
-  </div>
-  </div>
-<div class="flex-container3">
-<div>
-  <span class="lamp-container3">
-    <div class="lamp3"></div>
-    <strong>Driftstörning - DX49KN0</strong>
-  </span><br>
-  Starttid: 12/3/2025 - 12:00<br>
-  Problem: Användare X syns inte i systemet<br>
-  Åtgärd pågår: Inväntar sysadmin login<br>
-  Förväntad lösningstid: 1-2 veckor<br>
-  Nästa uppdatering: Om 1 vecka<br>
-  Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx
-</div>
-</div>  
 
 <footer>
-    <p class="footer-text">Telge</p>
+  <p class="footer-text">Telge</p>
 </footer>
 
 <script src="script/Upcoming.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var picker = new Pikaday({ field: document.getElementById('datepicker') });
-  });
-</script>
-
 </body>
 </html>
